# grocify

./: .gitignore  LICENSE  README.md  go.work  go.work.sum
.github/: dependabot.yml
.trunk/: trunk.yaml
client-mobile/: .env.example  .eslintrc.js  .gitignore  .prettierrc  App.tsx  README.md  app.json  babel.config.js  codegen.ts  metro.config.js  package.json  tamagui.config.ts  tsconfig.json  tsconfig.node.json
server/: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  Settings.example.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
server-new/: .air.toml  .env-example  .gitignore  Dockerfile  Makefile  README.md  config.go  docker-compose.dev.yml  (+6 more)
server/migrations/: 0001_users.sql
server/src/: config.rs  handlers.rs  main.rs  router.rs  schema.rs  server.rs
server/src/clients/: db_pool.rs  mod.rs  redis.rs  redis_interface.rs  tests.rs
server/src/features/: mod.rs
server/src/features/feature_a/: resolvers.rs  schema.rs
server/src/features/users/: enums.rs  errors.rs  mod.rs  model.rs  resolver.rs  schema.rs
server/src/helpers/: date_format.rs  mod.rs  redis_keys.rs  tests.rs
server/src/initializers/: mod.rs
server/src/routing/: handlers.rs  helpers.rs  mod.rs  paths.rs  tests.rs
server/src/schema/: create_schema.rs  mod.rs  mutation.rs  query.rs  schema_context.rs  session_user_id.rs  tests.rs
server/src/services/: mod.rs  routing_service.rs  schema_service.rs  session_service.rs
server/src/services/tests/: mod.rs  routing_service_tests.rs  schema_service_tests.rs  session_service_tests.rs
(+301 files in other folders)
