[package]
name = "grocify-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.11", features = ["uuid"] }
async-graphql-axum = "6.0.1"
async-redis-session = "0.2.2"
axum = "0.6.20"
axum-sessions = "0.5.0"
config = "0.13.3"
hyper = { version = "0.14.27", features = ["full"] }
indexmap = "2.0.0"
lazy_static = "1.4.0"
serde = "1.0.185"
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "macros",
  "migrate",
  "uuid",
  "chrono",
] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.uuid]
version = "1.4.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]
